[package]
name = "orbs-tee-protocol"
version = "0.1.4"
edition = "2021"
description = "ORBS TEE Protocol - Shared message types for host-enclave communication"
license = "MIT"
repository = "https://github.com/orbs-network/orbs-tee-protocol"
homepage = "https://github.com/orbs-network/orbs-tee-protocol"
keywords = ["tee", "enclave", "protocol", "secure"]
categories = ["cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
